--- a/index.html
+++ b/index.html
@@ -49,5 +49,32 @@
 </div>
 
  </div>
+<div class="collection_section">
+
+  <div class="collection">
+    <img src="./assets/img/TableWare.png" />
+    <h2>TableWare</h2>
+  </div>
+
+  <div class="collection">
+    <img src="./assets/img/Home decor.png" />
+    <h2>Home Decor</h2>
+  </div>
+
+  <div class="collection">
+    <img src="./assets/img/holiday.png" />
+    <h2>Holiday</h2>
+  </div>
+
+  <div class="collection">
+    <img src="./assets/img/Collection.png" />
+    <h2>Collection</h2>
+  </div>
+
+</div>
+
+
+
+
 </body>
 </html>
