--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
 
-    <div class="header">
+   <div class="header">
+    <div class="container">
+  <div class="row">
+    <div class="menu">
+      <img src="./assets/img/menu.svg" />
+
+    </div>
         <div class="logo">
             <img src="./assets/img/logo.svg" />
         </div>
-        
+        <div class="shopping">
+          <img src="./assets/img/Shoppingcart.svg" />
+
+        </div>
    
     <div class="list">
     <ul>
@@ -43,13 +52,18 @@
       <img src="./assets/img/Heart.svg" />
     </li>
     <li>
-      <img src="./assets/img/Shopping cart.svg" />
+      <img src="./assets/img/Shoppingcart.svg" />
     </li>
   </ul>
 </div>
 
  </div>
+  </div>
+</div>
+
 <div class="collection_section">
+  <div class="container">
+  <div class="row">
 
   <div class="collection">
     <img src="./assets/img/TableWare.png" />
@@ -72,6 +86,10 @@
   </div>
 
 </div>
+
+  </div>
+</div>
+ 
 
 
 
