create seller section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,127 @@
   </div>
 </div>
  
+<div class="best_sellers">
+  <h2>BEST SELLER</h2>
+  <div class="container">
+    <div class="row">
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/ceramic.svg">
 
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/whitevase.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/plate.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/vase20.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/roundedvase.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/whiteplate.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/ceramicvase.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+      <div class="item">
+        <div class="seller-img">
+          <img src="./assets/img/best-seller/bowl.svg">
+
+        </div>
+        <div class="item-content">
+          <h3>Small Ecru Ceramic Compote</h3>
+          <span class="price">$49.00</span>
+          <p class="description">Lorem ipsum dolor sit amet conse bolli tetur adipiscing elit.</p>
+          <button class="add-to-cart">ADD TO CART</button>
+
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
 
 
 
